try fix tests